--- a/dest/index.html
+++ b/dest/index.html
@@ -36,9 +36,9 @@
     >
         <thead>
         <tr>
-            <th data-field="details.list.0.title" data-formatter="ModuleFormatterUrl">MODULE</th>
-            <th data-field="versions" data-formatter="VersionFormatterUrl">VERSION</th>
-            <!--<th data-field="details.list.0.status" data-formatter="StatusFormatter">STATUS</th>-->
+            <th data-field="details.list.0.title" data-formatter="ModuleFormatterUrl">PROJECT</th>
+            <th data-field="version">INSTALLED</th>
+            <th data-field="versions" data-formatter="VersionFormatterUrl">AVAILABLE</th>
             <th data-field="maintainers" data-formatter="LinkFormatterUrl">MAINTAINERS</th>
         </tr>
         </thead>
