--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
     <title>Drupal Projects Status Board</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
@@ -36,9 +36,9 @@
     >
         <thead>
         <tr>
-            <th data-field="details.list.0.title" data-formatter="ModuleFormatterUrl">MODULE</th>
-            <th data-field="versions" data-formatter="VersionFormatterUrl">VERSION</th>
-            <!--<th data-field="details.list.0.status" data-formatter="StatusFormatter">STATUS</th>-->
+            <th data-field="details.list.0.title" data-formatter="ModuleFormatterUrl">PROJECT</th>
+            <th data-field="version">INSTALLED</th>
+            <th data-field="versions" data-formatter="VersionFormatterUrl">AVAILABLE</th>
             <th data-field="maintainers" data-formatter="LinkFormatterUrl">MAINTAINERS</th>
         </tr>
         </thead>
